--- a/nyc_citibike_daily_trip_aggregator.ipynb
+++ b/nyc_citibike_daily_trip_aggregator.ipynb
@@ -34,6 +34,10 @@
     "        fh = open(rootdir + file)\n",
     "        header = next(fh)\n",
     "\n",
+    "        # create a dated dictionary\n",
+    "        # with a nested dictionary to record trip starts and ends\n",
+    "        # for each station\n",
+    "        \n",
     "        trip_dict = {}\n",
     "\n",
     "        for line in fh:\n",
