--- a/nyc_citibike_daily_trip_aggregator.ipynb
+++ b/nyc_citibike_daily_trip_aggregator.ipynb
@@ -31,48 +31,72 @@
    "source": [
     "for file in os.listdir(rootdir):\n",
     "    if file.endswith(\".csv\"):\n",
-    "        fh = open(rootdir + file)\n",
-    "        header = next(fh)\n",
+    "        df = pd.read_csv(rootdir + file,\n",
+    "                         header=0,\n",
+    "                         names=['trip_duration', 'trip_start_time', 'trip_end_time',\n",
+    "                                'start_station_id', 'start_station_name', 'start_station_lat', 'start_station_lon',\n",
+    "                                'end_station_id', 'end_station_name', 'end_station_lat', 'end_station_lon',\n",
+    "                                'bike_id', 'user_type', 'birth_year', 'gender'\n",
+    "                                ],\n",
+    "                         dtype={'trip_duration': 'Int64', 'trip_start_time': 'object', 'trip_end_time': 'object',\n",
+    "                                'start_station_id': 'Int64', 'start_station_name': 'object',\n",
+    "                                'start_station_lat': 'float64', 'start_station_lon': 'float64',\n",
+    "                                'end_station_id': 'Int64', 'end_station_name': 'object',\n",
+    "                                'end_station_lat': 'float64', 'end_station_lon': 'float64',\n",
+    "                                'bike_id': 'Int64', 'user_type': 'object', 'birth_year': 'Int64', 'gender': 'Int64'},\n",
+    "                         engine='python'\n",
+    "                         )\n",
+    "        df = df.dropna(subset=['start_station_id', 'start_station_name', 'end_station_id', 'end_station_name'])\n",
+    "        trip_list = df.values.tolist()\n",
     "\n",
-    "        # create a dated dictionary\n",
-    "        # with a nested dictionary to record trip starts and ends\n",
-    "        # for each station\n",
-    "        \n",
     "        trip_dict = {}\n",
     "\n",
-    "        for line in fh:\n",
-    "            line = line.rstrip()\n",
-    "            line = line.split(',')\n",
-    "            date = datetime.strptime(line[1], '\"%Y-%m-%d %H:%M:%S.%f\"' ).date()\n",
-    "            start_station_id = str(line[4])\n",
-    "            end_station_id = str(line[8])\n",
+    "        for line in trip_list:\n",
+    "            date = datetime.strptime(line[1], '%Y-%m-%d %H:%M:%S.%f' ).date()\n",
+    "            start_station_id = line[3]\n",
+    "            start_station_name = str(line[4])\n",
+    "            start_station_lat = line[5]\n",
+    "            start_station_lon = line[6]\n",
+    "            end_station_id = line[7]\n",
+    "            end_station_name = str(line[8])\n",
+    "            end_station_lat = line[9]\n",
+    "            end_station_lon = line[10]\n",
     "\n",
     "            if date not in trip_dict:\n",
     "                trip_dict[date] = {}\n",
     "            if start_station_id not in trip_dict[date]:\n",
-    "                trip_dict[date][start_station_id] = [1, 0]\n",
+    "                trip_dict[date][start_station_id] = [1, 0,\n",
+    "                                                     start_station_name,\n",
+    "                                                     start_station_lat,\n",
+    "                                                     start_station_lon\n",
+    "                                                     ]\n",
     "            else:\n",
     "                trip_dict[date][start_station_id][0] += 1\n",
     "            if end_station_id not in trip_dict[date]:\n",
-    "                trip_dict[date][end_station_id] = [0, 1]\n",
+    "                trip_dict[date][end_station_id] = [0, 1,\n",
+    "                                                   end_station_name,\n",
+    "                                                   end_station_lat,\n",
+    "                                                   end_station_lon\n",
+    "                                                   ]\n",
     "            else:\n",
     "                trip_dict[date][end_station_id][1] += 1\n",
     "\n",
-    "        # create formatted list of daily trip counts for each station\n",
     "        trip_list_formatted = []\n",
     "\n",
     "        for trip_date in trip_dict.keys():\n",
-    "            for station in trip_dict[trip_date].keys():\n",
-    "                trip_list = [trip_date, station, trip_dict[trip_date][station][0], trip_dict[trip_date][station][1]]\n",
+    "            for station_id in trip_dict[trip_date].keys():\n",
+    "                trip_list = [trip_date, station_id, trip_dict[trip_date][station_id][0], trip_dict[trip_date][station_id][1], trip_dict[trip_date][station_id][2], trip_dict[trip_date][station_id][3], trip_dict[trip_date][station_id][4]]\n",
     "                trip_list_formatted.append(trip_list)\n",
     "\n",
     "        # sort the file\n",
-    "        trip_list_formatted.sort(key=lambda i: (i[0], i[1]))\n",
+    "        trip_list_formatted.sort(key=lambda i: (i[0], int(i[1])))\n",
     "\n",
-    "        # create csv file for each month\n",
+    "        # create csv file\n",
     "        file_ext = file[:6]\n",
-    "        columns = [\"date\", \"station_name\", \"trip_starts\", \"trip_ends\"]\n",
+    "        columns = [\"date\", \"station_id\", \"trip_starts\", \"trip_ends\", \"station_name\", \"station_lat\", \"station_lon\"]\n",
     "        df = pd.DataFrame(trip_list_formatted, columns=columns)\n",
+    "\n",
+    "        # create csv in test folder\n",
     "        df.to_csv(\"C:/Users/geoff/PycharmProjects/citibike/citibike_trip_data/citibike_summary_trip_counts/citibike_station_trip_counter_{}.csv\".format(file_ext),\n",
     "                  quoting=csv.QUOTE_NONE,\n",
     "                  index=False)"
