--- a/nyc_citibike_daily_trip_aggregator.ipynb
+++ b/nyc_citibike_daily_trip_aggregator.ipynb
@@ -85,7 +85,10 @@
     "\n",
     "        for trip_date in trip_dict.keys():\n",
     "            for station_id in trip_dict[trip_date].keys():\n",
-    "                trip_list = [trip_date, station_id, trip_dict[trip_date][station_id][0], trip_dict[trip_date][station_id][1], trip_dict[trip_date][station_id][2], trip_dict[trip_date][station_id][3], trip_dict[trip_date][station_id][4]]\n",
+    "                trip_list = [trip_date, station_id,\n",
+    "                             trip_dict[trip_date][station_id][0], trip_dict[trip_date][station_id][1],\n",
+    "                             trip_dict[trip_date][station_id][2], trip_dict[trip_date][station_id][3],\n",
+    "                             trip_dict[trip_date][station_id][4]]\n",
     "                trip_list_formatted.append(trip_list)\n",
     "\n",
     "        # sort the file\n",
