--- a/nyc_citibike_daily_trip_aggregator.ipynb
+++ b/nyc_citibike_daily_trip_aggregator.ipynb
@@ -29,8 +29,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Citibike daily trip count by station\n",
+    "\n",
+    "from datetime import date, datetime, timedelta\n",
+    "import pandas as pd\n",
+    "import csv\n",
+    "import os\n",
+    "\n",
+    "rootdir = 'C:/Users/geoff/PycharmProjects/citibike/citibike_trip_data/citibike_all_months/'\n",
+    "\n",
     "for file in os.listdir(rootdir):\n",
-    "    if file.endswith(\".csv\"):\n",
+    "    if file.endswith(\"202103-citibike-tripdata.csv\"):\n",
     "        df = pd.read_csv(rootdir + file,\n",
     "                         header=0,\n",
     "                         names=['trip_duration', 'trip_start_time', 'trip_end_time',\n",
@@ -62,6 +71,8 @@
     "            end_station_lat = line[9]\n",
     "            end_station_lon = line[10]\n",
     "\n",
+    "            # count trip starts and ends\n",
+    "            # collate trip counts in dicts\n",
     "            if date not in trip_dict:\n",
     "                trip_dict[date] = {}\n",
     "            if start_station_id not in trip_dict[date]:\n",
@@ -81,15 +92,17 @@
     "            else:\n",
     "                trip_dict[date][end_station_id][1] += 1\n",
     "\n",
+    "        # create a list of trip counts by date and station\n",
+    "        trip_list_summary = []\n",
     "        trip_list_formatted = []\n",
     "\n",
     "        for trip_date in trip_dict.keys():\n",
     "            for station_id in trip_dict[trip_date].keys():\n",
-    "                trip_list = [trip_date, station_id,\n",
-    "                             trip_dict[trip_date][station_id][0], trip_dict[trip_date][station_id][1],\n",
-    "                             trip_dict[trip_date][station_id][2], trip_dict[trip_date][station_id][3],\n",
-    "                             trip_dict[trip_date][station_id][4]]\n",
-    "                trip_list_formatted.append(trip_list)\n",
+    "                trip_list_summary = [trip_date, station_id,\n",
+    "                                     trip_dict[trip_date][station_id][0], trip_dict[trip_date][station_id][1],\n",
+    "                                     trip_dict[trip_date][station_id][2], trip_dict[trip_date][station_id][3],\n",
+    "                                     trip_dict[trip_date][station_id][4]]\n",
+    "                trip_list_formatted.append(trip_list_summary)\n",
     "\n",
     "        # sort the file\n",
     "        trip_list_formatted.sort(key=lambda i: (i[0], int(i[1])))\n",
