--- a/nyc_citibike_daily_trip_aggregator.ipynb
+++ b/nyc_citibike_daily_trip_aggregator.ipynb
@@ -30,7 +30,7 @@
    "outputs": [],
    "source": [
     "for file in os.listdir(rootdir):\n",
-    "    if file.endswith(\"202103-citibike-tripdata.csv\"):\n",
+    "    if file.endswith(\".csv\"):\n",
     "        df = pd.read_csv(rootdir + file,\n",
     "                         header=0,\n",
     "                         names=['trip_duration', 'trip_start_time', 'trip_end_time',\n",
