--- a/nyc_citibike_station_list_county_update.ipynb
+++ b/nyc_citibike_station_list_county_update.ipynb
@@ -47,7 +47,7 @@
     "    st_longitude = row[3]\n",
     "\n",
     "    # append the county name from the FCC API\n",
-    "    # obtained from: https://gis.stackexchange.com/questions/77048/local-geolocation-to-fips-county-using-latitude-and-longitude\n",
+    "    # adapted from: https://gis.stackexchange.com/questions/77048/local-geolocation-to-fips-county-using-latitude-and-longitude\n",
     "    # try/except added to skip IndexError for station coordinates that fall outside the US\n",
     "    with urllib.request.urlopen(\"https://geo.fcc.gov/api/census/area?lat={}&lon={}&format=json\".format(st_latitude, st_longitude)) as url:\n",
     "        try:\n",
